--- a/ReactJS Practice/2_ReactJS/src/index.css
+++ b/ReactJS Practice/2_ReactJS/src/index.css
@@ -21,10 +21,11 @@ h3{
 }
 
 ul, ol{
-    padding: 30px;
+    padding: 20px;
 }
 
 li{
-    padding: 10px;
+    font-size: 2.3vh;
+    padding: 5px;
     list-style: decimal;
 }
