complete : ReactJS $$ conditional rendering

--- a/ReactJS Practice/2_ReactJS/src/index.css
+++ b/ReactJS Practice/2_ReactJS/src/index.css
@@ -6,6 +6,10 @@
 body, html{
     background-color: #dff0f5;
 }
+::selection{
+    background-color: #d1f130;
+    color: red;
+}
 h1{
     color: #1679AB;
     text-align: center;
